Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.10.10 (?/?/?):
	Windows-Specific Changes:
	* Don't allow overwriting arbitrary files on the file system when the
	  user installs a smiley theme via drag-and-drop. (Discovered by Yves
	  Younan of Sourcefire VRT)
	* Updates to dependencies:
		* NSS 3.16 and NSPR 4.10.4

	Finch:
	* Fix build against Python 3. (Ed Catmur) (#15969)

	Gadu-Gadu:
	* Updated internal libgadu to version 1.12.0-rc2.

	Groupwise:
	* Fix potential remote crash parsing server message that indicates that
	  a large amount of memory should be allocated. (Discovered by Yves Younan
	  and Richard Johnson of Sourcefire VRT) (CVE-2014-NNNN)

	MXit:
	* Fix potential remote crash parsing a malformed emoticon response.
	  (Discovered by Yves Younan and Richard Johnson of Sourcefire VRT)
	  (CVE-2014-NNNN)

version 2.10.9 (2/2/2014):
	XMPP:
	* Fix problems logging into some servers including jabber.org and
	  chat.facebook.com. (#15879)

version 2.10.8 (1/28/2014):
	General:
	* Python build scripts and example plugins are now compatible with
	  Python 3. (Ashish Gupta) (#15624)

	libpurple:
	* Fix potential crash if libpurple gets an error attempting to read a
	  reply from a STUN server. (Discovered by Coverity static analysis)
	  (CVE-2013-6484)
	* Fix potential crash parsing a malformed HTTP response. (Discovered by
	  Jacob Appelbaum of the Tor Project) (CVE-2013-6479)
	* Fix buffer overflow when parsing a malformed HTTP response with
	  chunked Transfer-Encoding. (Discovered by Matt Jones, Volvent)
	  (CVE-2013-6485)
	* Better handling of HTTP proxy responses with negative Content-Lengths.
	  (Discovered by Matt Jones, Volvent)
	* Fix handling of SSL certificates without subjects when using libnss.
	* Fix handling of SSL certificates with timestamps in the distant future
	  when using libnss. (#15586)
	* Impose maximum download size for all HTTP fetches.

	Pidgin: